resources/css/cp.css
.extended_section-fieldtype {
  box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.15);
  margin-top: 10px!important;
}

.extended_section-fieldtype:first-of-type {
  margin-top: 10px!important;
}

/**
 * Background color
 * Based on the material [design color palette](https://material.google.com/style/color.html#color-color-palette)
 */
.extended_section-fieldtype.color-red {
  background: #FFCDD2;
}

.extended_section-fieldtype.color-green {
  background: #C8E6C9;
}

.extended_section-fieldtype.color-blue {
  background: #B3E5FC;
}

.extended_section-fieldtype.color-orange {
  background: #FFE0B2;
}

.extended_section-fieldtype.color-pink {
  background: #F8BBD0;
}

.extended_section-fieldtype.color-purple {
  background: #9C27B0;
  color: white;
}

.extended_section-fieldtype.color-brown {
  background: #E1BEE7;
}

.extended_section-fieldtype.color-black {
  background: #212121;
  color: white;
}

.extended_section-fieldtype.color-grey-30 {
  background: #EEEEEE;
}

.extended_section-fieldtype.color-grey-50 {
  background: #E0E0E0;
}

.extended_section-fieldtype.color-grey-80 {
  background: #BDBDBD;
}

.extended_section-fieldtype.color-carbon {
  background: radial-gradient(black 15%, transparent 16%) 0 0, radial-gradient(black 15%, transparent 16%) 8px 8px, radial-gradient(rgba(255, 255, 255, .1) 15%, transparent 20%) 0 1px, radial-gradient(rgba(255, 255, 255, .1) 15%, transparent 20%) 8px 9px;
  background-color: #282828;
  background-size: 16px 16px;
  color: white;
}

.extended_section-fieldtype.color-stripes {
  background-color: gray;
  color: white;
  background-image: repeating-linear-gradient(135deg, transparent, transparent 35px, rgba(255, 255, 255, .2) 35px, rgba(255, 255, 255, .2) 70px);
}
.extended_section-fieldtype.color-danger {
  color: white;
  background: #282828;
  border: 10px solid transparent;
  border-image: repeating-linear-gradient(135deg, #2b2b2b, #2b2b2b 15px, #ffc107 15px, #ffc107 30px) 10 repeat;
  padding: 14px; /* reduce padding by the amount of border added */
}

.extended_section-fieldtype.color-rainbow {
  color: white;
  background: #282828;
  border: 10px solid transparent;
  border-image: repeating-linear-gradient(135deg, #F44336 6.25%, #E91E63 6.25%, #E91E63 12.5%, #9C27B0 12.5%, #9C27B0 18.75%, #673AB7 18.75%, #673AB7 25%, #3F51B5 25%, #3F51B5 31.25%, #2196F3 31.25%, #2196F3 37.5%, #03A9F4 37.5%, #03A9F4 43.75%, #00BCD4 43.75%, #00BCD4 50%, #009688 50%, #009688 56.25%, #4CAF50 56.25%, #4CAF50 62.5%, #8BC34A 62.5%, #8BC34A 68.75%, #CDDC39 68.75%, #CDDC39 75%, #FFEB3B 75%, #FFEB3B 81.25%, #FFC107 81.25%, #FFC107 87.5%, #FF9800 87.5%, #FF9800 93.75%, #FF5722 93.75%, #FF5722 100%) 10 repeat;
  padding: 14px; /* reduce padding by the amount of border added */
}

.extended_section-fieldtype.color-danger .help-block,
.extended_section-fieldtype.color-rainbow .help-block {
  margin-bottom: 8px;
}

/**
 * Text color
 */
.extended_section-fieldtype label,
.extended_section-fieldtype .help-block {
  color: inherit;
}

.extended_section-fieldtype .help-block {
  opacity: 1;
  padding-right: 15px;
}

